--- a/.github/workflows/argocd.yml
+++ b/.github/workflows/argocd.yml
@@ -1,36 +1,81 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
-
-# Controls when the workflow will run
+name: Master Helm Deployemnt 
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
+  # workflow_dispatch:
+  #   inputs:
+  #     chartversion:
+  #       description: 'Chart Version'     
+  #       required: true
+  #       default: ''
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+   branches: [ main ]
+  # pull_request:
+  #  branches: [ main ]  
+      
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    #strategy:
+    #  matrix:
+    #    node: [ 14, 16, 18 ]
+    name: Argocd app deployment
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - name: Gitclone
+        uses: actions/checkout@v3
+        
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: "16.x"
+          
+      - name: Configure aws creds
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Login ECR
+        uses: aws-actions/amazon-ecr-login@v1
+        id: login-ecr   
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Build docker Image and Push
+        env:
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REPOSITORY: ${{ secrets.DOCKER_IMAGE_REPO }}
+          IMAGE_TAG: $(echo ${{ github.sha }} | head -c 8)
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          docker build -t $REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }} .
+          docker push $REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}
+          
+      # - name: Configure the deployment file
+      #   env:
+      #     REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+      #     REPOSITORY: ${{ secrets.DOCKER_IMAGE_REPO }} 
+      #     IMAGE_TAG: $(echo ${{ github.sha }} | head -c 8)
+      #   run: |
+      #     DOCKER=$REGISTRY/$REPOSITORY:${{ env.IMAGE_TAG }}
+      #     VERSION_ID=${{ github.event.inputs.chartversion}}
+      #     sed -i 's@VERSION@'"$VERSION_ID"'@' eks-charts/Chart.yaml
+      #     sed -i 's@CONTAINER_IMAGE@'"$DOCKER"'@' eks-charts/values.yaml
+      #     cat eks-charts/Chart.yaml
+      #     cat eks-charts/values.yaml
+
+      # - name: Deploy Helm
+      #   uses: bitovi/github-actions-deploy-eks-helm@v1.2.3
+      #   with:
+      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     aws-region: ${{ secrets.AWS_REGION }}
+      #     cluster-name: ${{ secrets.CLUSTER_NAME }}
+      #     chart-path: eks-charts/
+      #     namespace: master
+      #     name: node-app-helm-prod
+
+      # - name: Package and push helm chart to Amazon ECR
+      #   env:
+      #     REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+      #     REPOSITORY: ${{ secrets.HELM_REPO }}
+      #   run: |
+      #     VERSION_ID=${{ github.event.inputs.chartversion}}
+      #     helm package $REPOSITORY
+      #     helm push $REPOSITORY-$VERSION_ID.tgz oci://$REGISTRY    
