--- a/.github/workflows/argocd.yml
+++ b/.github/workflows/argocd.yml
@@ -51,16 +51,17 @@ jobs:
         # env:
         #   IMAGE_TAG: $(echo ${{ github.sha }} | head -c 8)  
         run: |
+          cat cat manifest/deployment.yaml
           chart_dir="manifest"
           IMAGE_TAG=$(echo ${{ github.sha }} | head -c 8)
-          sed -i "s/^  image: .*/  image: node-app:$IMAGE_TAG/" "$chart_dir/deployment.yaml" 
+          sed -i "s/^  image: .*/  image: node-app:$IMAGE_TAG/" "$chart_dir/deployment.yaml"
+          cat manifest/deployment.yaml 
       - name: Commit the changes made
         run: | 
           git config --global user.name "arunodhayamsam"
           git config --global user.email "100224916+arunodhayamsam@users.noreply.github.com"
-          git add .
           git commit -am "updating image tag"
-          git push 
+          git push
       # - name: Configure the deployment file
       #   env:
       #     REGISTRY: ${{ steps.login-ecr.outputs.registry }}
