--- a/.github/workflows/argocd.yml
+++ b/.github/workflows/argocd.yml
@@ -52,7 +52,8 @@ jobs:
           IMAGE_TAG: $(echo ${{ github.sha }} | head -c 8)  
         run: |
           cat manifest/deployment.yaml
-          sed -i 's/^ *image: .*/  image: node-app:${env.IMAGE_TAG}/' manifest/deployment.yaml
+          sed -i '/^ *image:/ s/:.*/: node-app:${env.IMAGE_TAG}/' manifest/deployment.yaml
+
           cat manifest/deployment.yaml 
       - name: Commit the changes made
         run: | 
