--- a/.github/workflows/argocd.yml
+++ b/.github/workflows/argocd.yml
@@ -51,8 +51,11 @@ jobs:
         env:
           IMAGE_TAG: $(echo ${{ github.sha }} | head -c 8)  
         run: |
+          TGA=${{ env.IMAGE_TAG }}
+          echo ${{ env.IMAGE_TAG }}
+          echo $TAG
           cat manifest/deployment.yaml
-          sed -i '/^ *image:/ s/:.*/: node-app:${{ env.IMAGE_TAG }}/' manifest/deployment.yaml
+          sed -i '/^ *image:/ s/:.*/: node-app:$TAG/' manifest/deployment.yaml
 
           cat manifest/deployment.yaml 
       - name: Commit the changes made
