--- a/manifest/deployment.yaml
+++ b/manifest/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: node-app:$(echo 1700386fc5cc5286f880b5e3f3119fd7bbc03878 | head -c 8)
+        image: node-app:$TAG
         ports:
         - containerPort: 80
