--- a/manifest/deployment.yaml
+++ b/manifest/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: node-app:`$TAG`
+        image: node-app:"$TAG"
         ports:
         - containerPort: 80
