--- a/.github/workflows/argocd.yml
+++ b/.github/workflows/argocd.yml
@@ -55,7 +55,7 @@ jobs:
           echo ${{ env.IMAGE_TAG }}
           echo $TAG
           cat manifest/deployment.yaml
-          sed -i '/^ *image:/ s/:.*/: node-app:"$TAG"/' manifest/deployment.yaml
+          sed -i "/^ *image:/ s/:.*/: node-app:$TAG/" manifest/deployment.yaml
 
           cat manifest/deployment.yaml 
       - name: Commit the changes made
