--- a/manifest/deployment.yaml
+++ b/manifest/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: node-app:75918ce3
+        image: 725972464939.dkr.ecr.us-east-1.amazonaws.com/node-app:75918ce3
         ports:
         - containerPort: 80
