Updated the nginx conf with permission

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,3 +1,4 @@
 FROM nginx:latest
-EXPOSE 80
+RUN chgrp -R 777 /var/cache/nginx /var/run /var/log/nginx && \
+    chmod -R 770 /var/cache/nginx /var/run /var/log/nginx
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
